[gd_scene load_steps=30 format=3 uid="uid://brrhme3x06dbp"]

[ext_resource type="Texture2D" uid="uid://b44ho5i86bqwy" path="res://assets/whitePuff00.png" id="1_52si7"]
[ext_resource type="ArrayMesh" uid="uid://dr15nx64s25nn" path="res://assets/SnowLayer_subdivisions.obj" id="2_ym40u"]
[ext_resource type="Shader" path="res://materials/snow_shader.gdshader" id="3_ac75s"]
[ext_resource type="Script" path="res://scripts/player-input.gd" id="3_gucpw"]
[ext_resource type="Script" path="res://scripts/player_node.gd" id="3_v2enm"]
[ext_resource type="Script" path="res://scripts/fire.gd" id="4_cjcqn"]
[ext_resource type="Script" path="res://scripts/wood_manager.gd" id="5_jdd0r"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="5_lyhul"]
[ext_resource type="Script" path="res://scripts/tree_manager.gd" id="6_gy3cr"]
[ext_resource type="Texture2D" uid="uid://bb3uhma5asl6d" path="res://assets/healthbarUnder.png" id="8_k6igo"]
[ext_resource type="Texture2D" uid="uid://kw66ppv7l26l" path="res://assets/healthbarProgress.png" id="9_6n4hx"]
[ext_resource type="FontFile" uid="uid://drsvmmb2o7vr1" path="res://assets/WorkSans-VariableFont_wght.ttf" id="10_lyxr8"]
[ext_resource type="Texture2D" uid="uid://t2ljcdv3u6d5" path="res://assets/fire_icon.png" id="10_ww4ab"]
[ext_resource type="AudioStream" uid="uid://mvgxp66mtjvp" path="res://assets/breakcore_turbat.mp3" id="15_lxyjr"]
[ext_resource type="PackedScene" uid="uid://k8kxm50gxth4" path="res://prefabs/Torch.tscn" id="14_fxxgw"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dncnp"]
emission_shape = 3
emission_box_extents = Vector3(150, 0, 150)
angle_min = -720.0
angle_max = 720.0
initial_velocity_max = 1.0
angular_velocity_min = -720.0
angular_velocity_max = 720.0
linear_accel_min = 0.999998
linear_accel_max = 0.999998
scale_min = 0.5
scale_max = 0.7

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_54t42"]
transparency = 1
albedo_texture = ExtResource("1_52si7")

[sub_resource type="QuadMesh" id="QuadMesh_ol56x"]
material = SubResource("StandardMaterial3D_54t42")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ctrxl"]
albedo_color = Color(0.690604, 0.760586, 1, 1)
metallic = 0.17
metallic_specular = 0.41
roughness = 0.44
emission = Color(0.0656275, 0.107379, 0.179586, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_cyenw"]
material = SubResource("StandardMaterial3D_ctrxl")
size = Vector2(300, 300)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ofbhm"]
render_priority = 0
shader = ExtResource("3_ac75s")

[sub_resource type="BoxShape3D" id="BoxShape3D_2dpup"]
size = Vector3(300, 1, 300)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_pvqdp"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_00vxr"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fsa2x"]
transparency = 1
cull_mode = 2
albedo_color = Color(0.113725, 0.572549, 0.137255, 0.172549)

[sub_resource type="CylinderMesh" id="CylinderMesh_nxch8"]
material = SubResource("StandardMaterial3D_fsa2x")
top_radius = 20.0
bottom_radius = 20.0
height = 6.8

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2f3cq"]
height = 6.8
radius = 11.0375

[sub_resource type="BoxShape3D" id="BoxShape3D_llp2x"]
size = Vector3(2, 2, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_isi1r"]
albedo_color = Color(0.658309, 0.261932, 0.147412, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ki5hu"]
material = SubResource("StandardMaterial3D_isi1r")
size = Vector3(2, 2, 2)

[node name="Main" type="Node"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.861629, -0.438653, -0.255302, 4.39754e-08, -0.50302, 0.864274, -0.507538, 0.744684, 0.433416, 0, 0, 0)
visible = false
light_energy = 0.812
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
shadow_enabled = true
shadow_bias = 0.862
shadow_normal_bias = 2.095
shadow_transmittance_bias = 5.536
shadow_blur = 1.402
directional_shadow_split_1 = 0.043
directional_shadow_split_2 = 0.409
directional_shadow_split_3 = 0.662
directional_shadow_fade_start = 0.848
directional_shadow_max_distance = 250.0

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -36.3367, 0)

[node name="GPUParticles3D" type="GPUParticles3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 69.8167, 0)
amount = 10000
lifetime = 10.0
visibility_aabb = AABB(-300, -10, -300, 1000, 1000, 1000)
process_material = SubResource("ParticleProcessMaterial_dncnp")
draw_pass_1 = SubResource("QuadMesh_ol56x")

[node name="Ground" type="StaticBody3D" parent="."]

[node name="Ground" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("PlaneMesh_cyenw")

[node name="Snow" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.227, 0)
mesh = ExtResource("2_ym40u")
surface_material_override/0 = SubResource("ShaderMaterial_ofbhm")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_2dpup")

[node name="Player_Node" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.168, 0)
script = ExtResource("3_v2enm")

[node name="Player" type="CharacterBody3D" parent="Player_Node"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.55048, 5.82924)
script = ExtResource("3_gucpw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player_Node/Player"]
mesh = SubResource("CapsuleMesh_pvqdp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player_Node/Player"]
shape = SubResource("ConvexPolygonShape3D_00vxr")

[node name="Camera3D" type="Camera3D" parent="Player_Node/Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.13802, -0.407837)
current = true

[node name="Torch" parent="Player_Node/Player/Camera3D" instance=ExtResource("14_fxxgw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.556253, -0.502272, -0.618438)

[node name="SafeZone" type="StaticBody3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="SafeZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.3416, 0)
visible = false
mesh = SubResource("CylinderMesh_nxch8")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SafeZone"]
shape = SubResource("CylinderShape3D_2f3cq")

[node name="Fire" type="StaticBody3D" parent="."]
script = ExtResource("4_cjcqn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Fire"]
shape = SubResource("BoxShape3D_llp2x")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Fire"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.50049, 0)
mesh = SubResource("BoxMesh_ki5hu")
skeleton = NodePath("")

[node name="FireLight" type="OmniLight3D" parent="Fire"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0547748, 3.29361, 0.0430803)
light_color = Color(0.818176, 0.294089, 0, 1)
light_energy = 13.794
light_indirect_energy = 6.95
light_volumetric_fog_energy = 4.136
light_specular = 3.055
omni_range = 107.432

[node name="WoodManager" type="Node3D" parent="."]
script = ExtResource("5_jdd0r")

[node name="TreeManager" type="Node3D" parent="."]
script = ExtResource("6_gy3cr")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("5_lyhul")

[node name="FireStrength" type="TextureProgressBar" parent="UI"]
offset_left = 60.0
offset_top = 10.0
offset_right = 316.0
offset_bottom = 50.0
max_value = 1.0
step = 0.001
texture_under = ExtResource("8_k6igo")
texture_progress = ExtResource("9_6n4hx")

[node name="WoodPieces" type="Label" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -152.0
offset_top = -48.0
offset_right = -30.0
offset_bottom = -14.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("10_lyxr8")
theme_override_font_sizes/font_size = 28
horizontal_alignment = 2

[node name="FireInteractableNotice" type="Label" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -48.0
offset_right = 20.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("10_lyxr8")
theme_override_font_sizes/font_size = 28

[node name="TextureRect" type="TextureRect" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 730.0
offset_bottom = 730.0
scale = Vector2(0.06, 0.06)
texture = ExtResource("10_ww4ab")

[node name="AmbientSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_lxyjr")
volume_db = -10.0
pitch_scale = 1.1
mix_target = 1
parameters/looping = true
